# qthni-cashier

./: CMakeLists.txt  README.md  mvc.cpp
app/: CMakeLists.txt
app/include/interfaces/: IItem.h  IObserver.h  ISubject.h
app/include/widgets/: frametitle.h  frametitle_p.h  mainwindow.h  panel.h  panel_internal.h  panel_p.h
app/include/widgets/items/: OperateItem.cpp  OperateItem.h  OperateItem_p.h  defaultitem.h  defaultitem_p.h  extenditem.h  extenditem_p.h  finalwidget.h  finalwidget_p.h  minimalitem.h  minimalitem_p.h  operateitem.h  operateitem_p.h  searchitem.h  searchitem_p.h
app/pages/analysic/: analysicpage.cpp  analysicpage.h  analysicpage_p.h
app/pages/analysic/components/: chartwidget.cpp  chartwidget.h  chartwidget_p.h  lastpurchase.cpp  lastpurchase.h  lastpurchase_p.h  remainingstock.cpp  remainingstock.h  remainingstock_p.h
app/pages/members/: MemberObject.cpp  MemberObject.h  MemberObjectManager.cpp  MemberObjectManager.h  MemberObjectManager_p.h  MemberObject_p.h  member.cpp  member.h  member_p.h  membermanager.cpp  membermanager.h  membermanager_p.h  memberpage.cpp  memberpage.h  memberpage_p.h
app/pages/members/components/: memberdialog.cpp  memberdialog.h  memberdialog_p.h  memberlist.cpp  memberlist.h  memberlist_p.h  profiledialog.cpp  profiledialog.h  profiledialog_p.h
app/pages/notifications/: notificationpage.cpp  notificationpage.h  notificationpage_p.h
app/pages/options/: optionpage.cpp  optionpage.h  optionpage_p.h
app/pages/products/: ProductObject.cpp  ProductObject.h  ProductObjectManager.cpp  ProductObjectManager.h  ProductObjectManager_p.h  ProductObject_p.h  product.cpp  product.h  product_p.h  product_tag.cpp  product_tag.h  product_tag_p.h  productmanager.cpp  productmanager.h  productmanager_p.h  productpage.cpp  productpage.h  productpage_p.h
app/pages/products/components/: productdialog.cpp  productdialog.h  productdialog_p.h  productlist.cpp  productlist.h  productlist_p.h
app/pages/purchase/: purchasepage.cpp  purchasepage.h  purchasepage_p.h
app/pages/purchase/components/: choosememberwidget.cpp  choosememberwidget.h  choosememberwidget_p.h  flowlayout.cpp  memberchooser.cpp  memberchooser.h  memberchooser_p.h  membernamewidget.cpp  membernamewidget.h  membernamewidget_p.h  orderlist.cpp  orderlist.h  orderlist_p.h  orderprice.cpp  orderprice.h  orderprice_p.h  pricewidget_p.h  pricewidgets.cpp  pricewidgets.h  pricewidgets_p.h  purchase_order_dialog.cpp  purchase_order_dialog.h  purchase_order_dialog_item.cpp  purchase_order_dialog_item.h  purchase_order_dialog_p.h  resultlist.cpp  resultlist.h  resultlist_p.h  resultpurchase.cpp  resultpurchase.h  resultpurchase_p.h  searchfield.cpp  searchfield.h  searchfield_p.h
app/resources/: hni_resources.qrc
app/resources/database/: HNIDatabase.cpp  HNIDatabase.h  hnidb.sqlite
app/src/: OperateItem.cpp  defaultitem.cpp  extenditem.cpp  finalwidget.cpp  flowlayout.cpp  frametitle.cpp  mainwindow.cpp  minimalitem.cpp  operateitem.cpp  panel.cpp  panel_internal.cpp  searchitem.cpp
core/: CMakeLists.txt  hproductdetail_p.h  main.cpp
core/backup/: hmembermodel.cpp  hmembermodel.h  hmembermodel_p.h
core/include/: haddmemberpage.h  haddproductpage.h  hanalysicpage.h  hanalysicpage_p.h  hconstructorpage.h  hframebuttonsetting.h  hinterfacewidget.h  hmainwindow.h  hmaterialbutton.h  hmaterialframe.h  hmaterialframe_p.h  hmaterialimage.h  hmateriallabel.h  hmaterialnormalproduct.h  hmaterialnormalproduct2.h  hmaterialnormalproduct_p.h  hmaterialorderprice.h  hmaterialorderprice_p.h  hmaterialpanel.h  hmaterialpanel_internal.h  hmaterialpanel_p.h  hmaterialprofile.h  hmaterialprofile_p.h  hmaterialsmallproduct.h  hmaterialsmallproduct_p.h  hmember.h  hmember_p.h  hmemberedit.h  hmemberedit_p.h  hmemberitem.h  hmemberitem_p.h  hmemberlist.h  hmemberlist_internal.h  hmemberlist_p.h  hmemberlistitem.h  hmemberlistitem_p.h  hmemberpage.h  hmemberpage_p.h  hmemberview.h  hmemberview_p.h  (+38 more)
core/src/: haddmemberpage.cpp  haddproductpage.cpp  hanalysicpage.cpp  hconstructorpage.cpp  hframebuttonsetting.cpp  hmainwindow.cpp  hmaterialbutton.cpp  hmaterialframe.cpp  hmaterialimage.cpp  hmateriallabel.cpp  hmaterialnormalproduct.cpp  hmaterialnormalproduct2.cpp  hmaterialorderprice.cpp  hmaterialpanel.cpp  hmaterialpanel_internal.cpp  hmaterialprofile.cpp  hmaterialsmallproduct.cpp  hmember.cpp  hmemberedit.cpp  hmemberitem.cpp  hmemberlist.cpp  hmemberlist_internal.cpp  hmemberpage.cpp  hmemberview.cpp  hmemberview_internal.cpp  hnotificationpage.cpp  hoptionpage.cpp  horderlist.cpp  horderprice.cpp  hpanel.cpp  hpanel_internal.cpp  hproduct.cpp  hproductchoose.cpp  hproductdetail.cpp  hproductedit.cpp  hproductitem.cpp  hproductlist.cpp  hproductnormalview.cpp  hproductpage.cpp  hproductresult.cpp  (+5 more)
lib/: CMakeLists.txt  hmaterialoverlaywidget.cpp  hmaterialoverlaywidget.h  hmaterialripple.cpp  hmaterialripple.h  hmaterialrippleoverlay.cpp  hmaterialrippleoverlay.h  hmaterialstatetransition.cpp  hmaterialstatetransition.h  hmaterialstatetransitionevent.h  hmaterialstyle.cpp  hmaterialstyle.h  hmaterialstyle_p.h  hmaterialtheme.cpp  hmaterialtheme.h  hmaterialtheme_p.h
widgets/: CMakeLists.txt
widgets/material/qtmaterial/components/: qtmaterialappbar.cpp  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialcheckbox.cpp  qtmaterialcheckbox.h  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.cpp  qtmaterialcircularprogress_internal.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdialog_internal.cpp  qtmaterialdrawer.cpp  qtmaterialdrawer.h  qtmaterialdrawer_internal.cpp  qtmaterialdrawer_internal.h  qtmaterialfab.cpp  qtmaterialfab.h  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_p.h  (+40 more)
(+93 files in other folders)
